[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdf"
version = "0.1.0"
description = "Molecular Data Frame"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pyarrow",
    "typer",
    "rich",
    "sieve @ git+https://github.com/hstern2/sieve.git",
    "rdkit",
    "matplotlib",
    "pymoo",
]

[project.scripts]
mdf = "mdf.cli:run"

[tool.hatch.metadata]
allow-direct-references = true
